CHATS_SIT/force-app/main/default/objects/Batchsit_t_rpt_acf_800__x/Batchsit_t_rpt_acf_800__x.object-meta.xml
<CustomObject>
    <description>batchsit$t_rpt_acf_800</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>batchsit$t_rpt_acf_800</externalName>
    <label>Batchsit$t_rpt_acf_800</label>
    <pluralLabel>Batchsit$t_rpt_acf_800</pluralLabel>
</CustomObject>