CHATS_SIT/force-app/main/default/objects/Batchsit_t_rpt_acf_800__x/fields/casetotal__c.field-meta.xml
<CustomField>
    <fullName>casetotal__c</fullName>
    <description>casetotal</description>
    <externalDeveloperName>casetotal</externalDeveloperName>
    <label>Casetotal</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>