CHATS_SIT/force-app/main/default/objects/Batchsit_t_rpt_acf_800__x/fields/clienttotal__c.field-meta.xml
<CustomField>
    <fullName>clienttotal__c</fullName>
    <description>clienttotal</description>
    <externalDeveloperName>clienttotal</externalDeveloperName>
    <label>Clienttotal</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>