CHATS_SIT/force-app/main/default/objects/Batchsit_t_rpt_acf_800__x/fields/cpd__c.field-meta.xml
<CustomField>
    <fullName>cpd__c</fullName>
    <description>cpd</description>
    <externalDeveloperName>cpd</externalDeveloperName>
    <label>Cpd</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>