CHATS_SIT/force-app/main/default/objects/Batchsit_t_rpt_acf_800__x/fields/cpd_provider__c.field-meta.xml
<CustomField>
    <fullName>cpd_provider__c</fullName>
    <description>cpd_provider</description>
    <externalDeveloperName>cpd_provider</externalDeveloperName>
    <label>Cpd_provider</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>