CHATS_SIT/force-app/main/default/objects/Batchsit_t_rpt_acf_800__x/fields/cpd_slot__c.field-meta.xml
<CustomField>
    <fullName>cpd_slot__c</fullName>
    <description>cpd_slot</description>
    <externalDeveloperName>cpd_slot</externalDeveloperName>
    <label>Cpd_slot</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>