CHATS_SIT/force-app/main/default/objects/Batchsit_t_rpt_acf_800__x/fields/dcc__c.field-meta.xml
<CustomField>
    <fullName>dcc__c</fullName>
    <description>dcc</description>
    <externalDeveloperName>dcc</externalDeveloperName>
    <label>Dcc</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>