CHATS_SIT/force-app/main/default/objects/Batchsit_t_rpt_acf_800__x/fields/dcc_provider__c.field-meta.xml
<CustomField>
    <fullName>dcc_provider__c</fullName>
    <description>dcc_provider</description>
    <externalDeveloperName>dcc_provider</externalDeveloperName>
    <label>Dcc_provider</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>