CHATS_SIT/force-app/main/default/objects/Batchsit_t_rpt_acf_800__x/fields/dcc_slot__c.field-meta.xml
<CustomField>
    <fullName>dcc_slot__c</fullName>
    <description>dcc_slot</description>
    <externalDeveloperName>dcc_slot</externalDeveloperName>
    <label>Dcc_slot</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>