CHATS_SIT/force-app/main/default/objects/Batchsit_t_rpt_acf_800__x/fields/dch3__c.field-meta.xml
<CustomField>
    <fullName>dch3__c</fullName>
    <description>dch3</description>
    <externalDeveloperName>dch3</externalDeveloperName>
    <label>Dch3</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>