CHATS_SIT/force-app/main/default/objects/Batchsit_t_rpt_acf_800__x/fields/dch3_provider__c.field-meta.xml
<CustomField>
    <fullName>dch3_provider__c</fullName>
    <description>dch3_provider</description>
    <externalDeveloperName>dch3_provider</externalDeveloperName>
    <label>Dch3_provider</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>