CHATS_SIT/force-app/main/default/objects/Batchsit_t_rpt_acf_800__x/fields/dch3_slot__c.field-meta.xml
<CustomField>
    <fullName>dch3_slot__c</fullName>
    <description>dch3_slot</description>
    <externalDeveloperName>dch3_slot</externalDeveloperName>
    <label>Dch3_slot</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>