CHATS_SIT/force-app/main/default/objects/Batchsit_t_rpt_acf_800__x/fields/dhc__c.field-meta.xml
<CustomField>
    <fullName>dhc__c</fullName>
    <description>dhc</description>
    <externalDeveloperName>dhc</externalDeveloperName>
    <label>Dhc</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>