CHATS_SIT/force-app/main/default/objects/Batchsit_t_rpt_acf_800__x/fields/dhc_provider__c.field-meta.xml
<CustomField>
    <fullName>dhc_provider__c</fullName>
    <description>dhc_provider</description>
    <externalDeveloperName>dhc_provider</externalDeveloperName>
    <label>Dhc_provider</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>