CHATS_SIT/force-app/main/default/objects/Batchsit_t_rpt_acf_800__x/fields/dhc_slot__c.field-meta.xml
<CustomField>
    <fullName>dhc_slot__c</fullName>
    <description>dhc_slot</description>
    <externalDeveloperName>dhc_slot</externalDeveloperName>
    <label>Dhc_slot</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>