CHATS_SIT/force-app/main/default/objects/Batchsit_t_rpt_acf_800__x/fields/eccp__c.field-meta.xml
<CustomField>
    <fullName>eccp__c</fullName>
    <description>eccp</description>
    <externalDeveloperName>eccp</externalDeveloperName>
    <label>Eccp</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>