CHATS_SIT/force-app/main/default/objects/Batchsit_t_rpt_acf_800__x/fields/eccp_provider__c.field-meta.xml
<CustomField>
    <fullName>eccp_provider__c</fullName>
    <description>eccp_provider</description>
    <externalDeveloperName>eccp_provider</externalDeveloperName>
    <label>Eccp_provider</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>