CHATS_SIT/force-app/main/default/objects/Batchsit_t_rpt_acf_800__x/fields/eccp_slot__c.field-meta.xml
<CustomField>
    <fullName>eccp_slot__c</fullName>
    <description>eccp_slot</description>
    <externalDeveloperName>eccp_slot</externalDeveloperName>
    <label>Eccp_slot</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>