CHATS_SIT/force-app/main/default/objects/Batchsit_t_rpt_acf_800__x/fields/efacb__c.field-meta.xml
<CustomField>
    <fullName>efacb__c</fullName>
    <description>efacb</description>
    <externalDeveloperName>efacb</externalDeveloperName>
    <label>Efacb</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>