CHATS_SIT/force-app/main/default/objects/Batchsit_t_rpt_acf_800__x/fields/efacb_provider__c.field-meta.xml
<CustomField>
    <fullName>efacb_provider__c</fullName>
    <description>efacb_provider</description>
    <externalDeveloperName>efacb_provider</externalDeveloperName>
    <label>Efacb_provider</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>