CHATS_SIT/force-app/main/default/objects/Batchsit_t_rpt_acf_800__x/fields/efacb_slot__c.field-meta.xml
<CustomField>
    <fullName>efacb_slot__c</fullName>
    <description>efacb_slot</description>
    <externalDeveloperName>efacb_slot</externalDeveloperName>
    <label>Efacb_slot</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>