CHATS_SIT/force-app/main/default/objects/Batchsit_t_rpt_acf_800__x/fields/idn_report__c.field-meta.xml
<CustomField>
    <fullName>idn_report__c</fullName>
    <description>idn_report</description>
    <externalDeveloperName>idn_report</externalDeveloperName>
    <label>Idn_report</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>