CHATS_SIT/force-app/main/default/objects/Batchsit_t_rpt_acf_800__x/fields/inn__c.field-meta.xml
<CustomField>
    <fullName>inn__c</fullName>
    <description>inn</description>
    <externalDeveloperName>inn</externalDeveloperName>
    <label>Inn</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>