CHATS_SIT/force-app/main/default/objects/Batchsit_t_rpt_acf_800__x/fields/inn_provider__c.field-meta.xml
<CustomField>
    <fullName>inn_provider__c</fullName>
    <description>inn_provider</description>
    <externalDeveloperName>inn_provider</externalDeveloperName>
    <label>Inn_provider</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>