CHATS_SIT/force-app/main/default/objects/Batchsit_t_rpt_acf_800__x/fields/inn_slot__c.field-meta.xml
<CustomField>
    <fullName>inn_slot__c</fullName>
    <description>inn_slot</description>
    <externalDeveloperName>inn_slot</externalDeveloperName>
    <label>Inn_slot</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>