CHATS_SIT/force-app/main/default/objects/Batchsit_t_rpt_acf_800__x/fields/inr__c.field-meta.xml
<CustomField>
    <fullName>inr__c</fullName>
    <description>inr</description>
    <externalDeveloperName>inr</externalDeveloperName>
    <label>Inr</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>