CHATS_SIT/force-app/main/default/objects/Batchsit_t_rpt_acf_800__x/fields/inr_provider__c.field-meta.xml
<CustomField>
    <fullName>inr_provider__c</fullName>
    <description>inr_provider</description>
    <externalDeveloperName>inr_provider</externalDeveloperName>
    <label>Inr_provider</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>