CHATS_SIT/force-app/main/default/objects/Batchsit_t_rpt_acf_800__x/fields/inr_slot__c.field-meta.xml
<CustomField>
    <fullName>inr_slot__c</fullName>
    <description>inr_slot</description>
    <externalDeveloperName>inr_slot</externalDeveloperName>
    <label>Inr_slot</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>