CHATS_SIT/force-app/main/default/objects/Batchsit_t_rpt_acf_800__x/fields/ith__c.field-meta.xml
<CustomField>
    <fullName>ith__c</fullName>
    <description>ith</description>
    <externalDeveloperName>ith</externalDeveloperName>
    <label>Ith</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>