CHATS_SIT/force-app/main/default/objects/Batchsit_t_rpt_acf_800__x/fields/ith_provider__c.field-meta.xml
<CustomField>
    <fullName>ith_provider__c</fullName>
    <description>ith_provider</description>
    <externalDeveloperName>ith_provider</externalDeveloperName>
    <label>Ith_provider</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>