CHATS_SIT/force-app/main/default/objects/Batchsit_t_rpt_acf_800__x/fields/ith_slot__c.field-meta.xml
<CustomField>
    <fullName>ith_slot__c</fullName>
    <description>ith_slot</description>
    <externalDeveloperName>ith_slot</externalDeveloperName>
    <label>Ith_slot</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>