CHATS_SIT/force-app/main/default/objects/Batchsit_t_rpt_acf_800__x/fields/ldch__c.field-meta.xml
<CustomField>
    <fullName>ldch__c</fullName>
    <description>ldch</description>
    <externalDeveloperName>ldch</externalDeveloperName>
    <label>Ldch</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>