CHATS_SIT/force-app/main/default/objects/Batchsit_t_rpt_acf_800__x/fields/ldch_provider__c.field-meta.xml
<CustomField>
    <fullName>ldch_provider__c</fullName>
    <description>ldch_provider</description>
    <externalDeveloperName>ldch_provider</externalDeveloperName>
    <label>Ldch_provider</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>