CHATS_SIT/force-app/main/default/objects/Batchsit_t_rpt_acf_800__x/fields/ldch_slot__c.field-meta.xml
<CustomField>
    <fullName>ldch_slot__c</fullName>
    <description>ldch_slot</description>
    <externalDeveloperName>ldch_slot</externalDeveloperName>
    <label>Ldch_slot</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>