CHATS_SIT/force-app/main/default/objects/Batchsit_t_rpt_acf_800__x/fields/other__c.field-meta.xml
<CustomField>
    <fullName>other__c</fullName>
    <description>other</description>
    <externalDeveloperName>other</externalDeveloperName>
    <label>Other</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>