CHATS_SIT/force-app/main/default/objects/Batchsit_t_rpt_acf_800__x/fields/other_provider__c.field-meta.xml
<CustomField>
    <fullName>other_provider__c</fullName>
    <description>other_provider</description>
    <externalDeveloperName>other_provider</externalDeveloperName>
    <label>Other_provider</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>