CHATS_SIT/force-app/main/default/objects/Batchsit_t_rpt_acf_800__x/fields/other_slot__c.field-meta.xml
<CustomField>
    <fullName>other_slot__c</fullName>
    <description>other_slot</description>
    <externalDeveloperName>other_slot</externalDeveloperName>
    <label>Other_slot</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>