CHATS_SIT/force-app/main/default/objects/Batchsit_t_rpt_acf_800__x/fields/otn__c.field-meta.xml
<CustomField>
    <fullName>otn__c</fullName>
    <description>otn</description>
    <externalDeveloperName>otn</externalDeveloperName>
    <label>Otn</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>