CHATS_SIT/force-app/main/default/objects/Batchsit_t_rpt_acf_800__x/fields/otn_provider__c.field-meta.xml
<CustomField>
    <fullName>otn_provider__c</fullName>
    <description>otn_provider</description>
    <externalDeveloperName>otn_provider</externalDeveloperName>
    <label>Otn_provider</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>