CHATS_SIT/force-app/main/default/objects/Batchsit_t_rpt_acf_800__x/fields/otn_slot__c.field-meta.xml
<CustomField>
    <fullName>otn_slot__c</fullName>
    <description>otn_slot</description>
    <externalDeveloperName>otn_slot</externalDeveloperName>
    <label>Otn_slot</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>