CHATS_SIT/force-app/main/default/objects/Batchsit_t_rpt_acf_800__x/fields/otr__c.field-meta.xml
<CustomField>
    <fullName>otr__c</fullName>
    <description>otr</description>
    <externalDeveloperName>otr</externalDeveloperName>
    <label>Otr</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>