CHATS_SIT/force-app/main/default/objects/Batchsit_t_rpt_acf_800__x/fields/otr_provider__c.field-meta.xml
<CustomField>
    <fullName>otr_provider__c</fullName>
    <description>otr_provider</description>
    <externalDeveloperName>otr_provider</externalDeveloperName>
    <label>Otr_provider</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>