CHATS_SIT/force-app/main/default/objects/Batchsit_t_rpt_acf_800__x/fields/otr_slot__c.field-meta.xml
<CustomField>
    <fullName>otr_slot__c</fullName>
    <description>otr_slot</description>
    <externalDeveloperName>otr_slot</externalDeveloperName>
    <label>Otr_slot</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>