CHATS_SIT/force-app/main/default/objects/Batchsit_t_rpt_acf_800__x/fields/prs__c.field-meta.xml
<CustomField>
    <fullName>prs__c</fullName>
    <description>prs</description>
    <externalDeveloperName>prs</externalDeveloperName>
    <label>Prs</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>