CHATS_SIT/force-app/main/default/objects/Batchsit_t_rpt_acf_800__x/fields/prs_provider__c.field-meta.xml
<CustomField>
    <fullName>prs_provider__c</fullName>
    <description>prs_provider</description>
    <externalDeveloperName>prs_provider</externalDeveloperName>
    <label>Prs_provider</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>