CHATS_SIT/force-app/main/default/objects/Batchsit_t_rpt_acf_800__x/fields/prs_slot__c.field-meta.xml
<CustomField>
    <fullName>prs_slot__c</fullName>
    <description>prs_slot</description>
    <externalDeveloperName>prs_slot</externalDeveloperName>
    <label>Prs_slot</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>