CHATS_SIT/force-app/main/default/objects/Batchsit_t_rpt_acf_800__x/fields/sacc__c.field-meta.xml
<CustomField>
    <fullName>sacc__c</fullName>
    <description>sacc</description>
    <externalDeveloperName>sacc</externalDeveloperName>
    <label>Sacc</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>