CHATS_SIT/force-app/main/default/objects/Batchsit_t_rpt_acf_800__x/fields/sacc_provider__c.field-meta.xml
<CustomField>
    <fullName>sacc_provider__c</fullName>
    <description>sacc_provider</description>
    <externalDeveloperName>sacc_provider</externalDeveloperName>
    <label>Sacc_provider</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>