CHATS_SIT/force-app/main/default/objects/Batchsit_t_rpt_acf_800__x/fields/sacc_slot__c.field-meta.xml
<CustomField>
    <fullName>sacc_slot__c</fullName>
    <description>sacc_slot</description>
    <externalDeveloperName>sacc_slot</externalDeveloperName>
    <label>Sacc_slot</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>