CHATS_SIT/force-app/main/default/objects/Batchsit_t_rpt_acf_800__x/fields/slotcasetotal__c.field-meta.xml
<CustomField>
    <fullName>slotcasetotal__c</fullName>
    <description>slotcasetotal</description>
    <externalDeveloperName>slotcasetotal</externalDeveloperName>
    <label>Slotcasetotal</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>