CHATS_SIT/force-app/main/default/objects/Batchsit_t_rpt_acf_800__x/fields/slotclientotal__c.field-meta.xml
<CustomField>
    <fullName>slotclientotal__c</fullName>
    <description>slotclientotal</description>
    <externalDeveloperName>slotclientotal</externalDeveloperName>
    <label>Slotclientotal</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>