CHATS_SIT/force-app/main/default/objects/Batchsit_t_rpt_acf_800__x/fields/slotprovider__c.field-meta.xml
<CustomField>
    <fullName>slotprovider__c</fullName>
    <description>slotprovider</description>
    <externalDeveloperName>slotprovider</externalDeveloperName>
    <label>Slotprovider</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>